update of new pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
             <div class="col-lg-11 col-md-11 col-sm-12">
                 <div class="single-cat">
                     <div class="cat-cap">
-                        <h5 class="red-text lead-font-size">Background</a></h5>
+                        <h2 class="red-text lead-font-size">Background</a></h2>
                         <p align="justify" style="color:black; font-size: 19px" class="pb-40">
                             Lagos State is introducing the Certified Accreditor Programme as part of the reforms to restore confidence
                             in the building construction industry by ensuring that all building projects within the state are adequately 
@@ -133,7 +133,7 @@
                                 <strong>Minimum of 10 years post professional registration</strong></small>
                             </li>
                         </ul>
-                        <a href="{% url 'accreditors:about' %}" class="borders-btn">Read More</a>
+                        <a href="{% url 'accreditors:grade_a' %}" class="borders-btn">Read More</a>
                     </div>
                 </div>
             </div>
@@ -154,7 +154,7 @@
                                 <strong>Minimum of 10 years post professional registration</strong></small>
                             </li>
                         </ul>
-                        <a href="{% url 'accreditors:about' %}" class="borders-btn">Read More</a>
+                        <a href="{% url 'accreditors:grade_b' %}" class="borders-btn">Read More</a>
                     </div>
                 </div>
             </div>
@@ -174,7 +174,7 @@
                                 <strong>Minimum of 6 years post professional registration</strong></small>
                             </li>
                         </ul>
-                        <a href="{% url 'accreditors:about' %}" class="borders-btn">Read More</a>
+                        <a href="{% url 'accreditors:grade_c' %}" class="borders-btn">Read More</a>
                     </div>
                 </div>
             </div>
@@ -195,7 +195,7 @@
                                 <strong>Minimum of 3 years post professional registration</strong></small>
                             </li>
                         </ul>
-                        <a href="{% url 'accreditors:about' %}" class="borders-btn">Read More</a>
+                        <a href="{% url 'accreditors:grade_d' %}" class="borders-btn">Read More</a>
                     </div>
                 </div>
             </div>
@@ -260,7 +260,7 @@
                             <li>A Registered builder</li>
                             <li>A Registered Town Planner</li>
                             <li>A Registered Geoscientist</li>
-
+                            <li>Other Relevant Professional in the Built Environment</li>
                         </ol>
                     </div>
                 </div>
