--- a/templates/dashboard/create_accreditor.html
+++ b/templates/dashboard/create_accreditor.html
@@ -14,6 +14,7 @@
                         </div>
                     </div>
                 </div>
+                <strong style="color:red">(Note: Multiple Application should be filled one after the other)</strong>
             </div>
         </div>
     </div>
