image added to vidoe

--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,9 @@
 <section class="team-area section-padding40 section-bg1">
     <div class="container">
         <div class="embed-responsive embed-responsive-16by9">
-            <video class="embed-responsive-item" controls autoplay>
+            <video class="embed-responsive-item" controls autoplay 
+            controls poster=
+                "{% static 'assets/onboarding.png' %}">
                 <source src="{% static 'assets/onboarding.m4v' %}" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
